[package]
name = "oneshot"
version = "0.1.7"
authors = ["Linus Färnstrand <faern@faern.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = """
Oneshot spsc channel with (potentially) lock-free non-blocking send, and a receiver supporting
both thread blocking receive operations as well as Future based async polling.
"""

repository = "https://github.com/faern/oneshot"
keywords = ["oneshot", "spsc", "async", "sync", "channel"]
categories = ["asynchronous", "concurrency"]
edition = "2021"
rust-version = "1.60.0"

[features]
# TODO: Remove the default features on next breaking release and make them opt-in.
# Because default features are evil
default = ["std", "async"]

# Enables usage of libstd. Adds support for thread blocking receive methods.
std = []
# Enables async receiving by implementing Future
async = []

[dependencies]
# Only used for internal correctness testing. Never enable this feature when using oneshot.
loom = { version = "0.7.2", features = ["futures"], optional = true }

[dev-dependencies]
criterion = "0.3"

[target.'cfg(not(loom))'.dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
async-std = { version = "1", features = ["attributes"] }

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(loom)', 'cfg(oneshot_test_delay)'] }

[[bench]]
name = "benches"
harness = false
